Fixed account creation password visibility button styles

--- a/src/pages/Login/styles.scss
+++ b/src/pages/Login/styles.scss
@@ -227,7 +227,7 @@
   }
 
   .form-control {
-    width: 100%;
+
   }
 
   .form-title {
